# llmzk

./: .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/llmzk-ingest/: SKILL.md
scaffold/: .gitignore  .llmzk.yaml  AGENTS.md  opencode.json
scaffold/.opencode/: README.md
scaffold/.opencode/agents/: zk-auditor.md  zk-critic.md  zk-curator.md  zk-synthesizer.md
scaffold/.opencode/benchmarks/: README.md
scaffold/.opencode/commands/: llmzk-audit.md  llmzk-benchmark.md  llmzk-doctor.md  llmzk-fix-frontmatter.md  llmzk-git-commit-message.md  llmzk-git-diff.md  llmzk-git-preflight.md  llmzk-git-revert-run.md  llmzk-git-status.md  llmzk-ingest-candidates.md  llmzk-ingest.md  llmzk-normalize-links.md  llmzk-promote-candidates.md  llmzk-promote.md  llmzk-review.md  (+5 more)
scaffold/.opencode/llmzk-tools/: .coverage  Makefile  README.md  pyproject.toml
scaffold/.opencode/llmzk-tools/scripts/: llmzk_audit.py  llmzk_fix_frontmatter.py  llmzk_git_safety.py  llmzk_new_run.py  llmzk_normalize_links.py  llmzk_smoke_test.py
scaffold/.opencode/llmzk-tools/src/llmzk_tools/: __init__.py  audit.py  benchmark.py  config.py  doctor.py  fix_frontmatter.py  frontmatter.py  git_safety.py  git_util.py  new_run.py  normalize_links.py  paths.py  review.py  smoke_test.py  update.py  wikilink.py
scaffold/.opencode/llmzk-tools/tests/: test_benchmark.py  test_doctor.py  test_git_safety.py  test_new_run.py  test_update.py
scaffold/Templates/: bridge-note.md  candidate-review.md  concept-note.md  contradiction-note.md  decision-log.md  index-note.md  literature-note.md  passport.md  permanent-note.md  source-note.md
scripts/: build-scaffold.py  init-vault.sh  update-vault.sh
src/llmzk/: doctor.py  init.py
tests/integration/: test_installed_vault.py  test_monorepo_layout.py
(+32 files in other folders)
