[project]
name = "llmzk"
version = "0.5.1"
description = "OpenCode + Obsidian Zettelkasten harness installer and scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llmzk-init = "llmzk.init:main"
llmzk-doctor = "llmzk.doctor:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
