[project]
name = "llmzk"
version = "0.5.2"
description = "OpenCode + Obsidian Zettelkasten harness installer and scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.43",
    "tyro>=0.9.0",
]

[project.scripts]
llmzk-init = "llmzk.init:main"
llmzk-doctor = "llmzk.doctor:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
