[project]
name = "llmzk-tools"
version = "0.5.6.1"
description = "Deterministic utilities for an installed llmzk OpenCode/Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.43",
    "pyyaml>=6.0.2",
    "tyro>=0.9.0",
]

[project.scripts]
llmzk-audit = "llmzk_tools.audit:main"
llmzk-benchmark = "llmzk_tools.benchmark:main"
llmzk-doctor = "llmzk_tools.doctor:main"
llmzk-fix-frontmatter = "llmzk_tools.fix_frontmatter:main"
llmzk-git-safety = "llmzk_tools.git_safety:main"
llmzk-new-run = "llmzk_tools.new_run:main"
llmzk-normalize-links = "llmzk_tools.normalize_links:main"
llmzk-review = "llmzk_tools.review:main"
llmzk-smoke-test = "llmzk_tools.smoke_test:main"
llmzk-update = "llmzk_tools.update:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
